--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-template",
+  "name": "my-bookstore",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,13 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "uniqid": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
